# CellularAutomaton

./: CMakeLists.txt
CellularAutomaton/: CMakeLists.txt  CellularAutomatonSettings.txt  button.cpp  button.h  grid.cpp  grid.h  gridsettings.cpp  gridsettings.h  gridsettingscreator.cpp  gridsettingscreator.h  inputhandler.cpp  inputhandler.h  main.cpp  renderer.cpp  renderer.h  simulationwindow.cpp  simulationwindow.h
